# serializer version: 1
# name: test_active_internal_and_ticketmaster_enrolments
  dict({
    'data': dict({
      'child': dict({
        'activeInternalAndTicketSystemEnrolments': dict({
          'edges': list([
            dict({
              'node': dict({
                '__typename': 'TicketmasterEnrolmentNode',
                'createdAt': '2020-12-12T00:00:00+00:00',
                'event': dict({
                  'name': '1/5',
                }),
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EnrolmentNode',
                'occurrence': dict({
                  'event': dict({
                    'name': '2/5',
                  }),
                }),
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'TicketmasterEnrolmentNode',
                'createdAt': '2020-12-12T00:00:00+00:00',
                'event': dict({
                  'name': '3/5',
                }),
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EnrolmentNode',
                'occurrence': dict({
                  'event': dict({
                    'name': '4/5',
                  }),
                }),
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'TicketmasterEnrolmentNode',
                'createdAt': '2020-12-12T00:00:00+00:00',
                'event': dict({
                  'name': '5/5',
                }),
              }),
            }),
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_add_child_mutation
  dict({
    'data': dict({
      'addChild': dict({
        'child': dict({
          'birthyear': 2020,
          'name': 'Pekka',
          'postalCode': '00820',
        }),
      }),
    }),
  })
# ---
# name: test_available_events_and_event_groups
  dict({
    'data': dict({
      'child': dict({
        'availableEventsAndEventGroups': dict({
          'edges': list([
            dict({
              'node': dict({
                '__typename': 'EventGroupNode',
                'name': 'this should be the first',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventNode',
                'name': 'this should be the second',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventGroupNode',
                'name': 'this should be the third',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventNode',
                'name': 'this should be the fourth',
              }),
            }),
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_child_query
  dict({
    'data': dict({
      'child': dict({
        'birthyear': 2019,
        'name': 'Richard Hayes',
        'postalCode': '57776',
        'relationships': dict({
          'edges': list([
            dict({
              'node': dict({
                'guardian': dict({
                  'email': 'michellewalker@example.net',
                  'firstName': 'Denise',
                  'lastName': 'Thompson',
                  'phoneNumber': '001-206-575-0649x7638',
                }),
                'type': 'OTHER_RELATION',
              }),
            }),
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_child_query_not_own_child_project_user
  dict({
    'data': dict({
      'child': dict({
        'birthyear': 2019,
        'name': 'Richard Hayes',
        'postalCode': '57776',
        'relationships': dict({
          'edges': list([
            dict({
              'node': dict({
                'guardian': dict({
                  'email': 'blake64@example.net',
                  'firstName': 'Timothy',
                  'lastName': 'Baldwin',
                  'phoneNumber': '480.934.6697',
                }),
                'type': 'PARENT',
              }),
            }),
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_children_offset_pagination[10-None]
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
          dict({
            'node': dict({
              'name': '1',
            }),
          }),
          dict({
            'node': dict({
              'name': '2',
            }),
          }),
          dict({
            'node': dict({
              'name': '3',
            }),
          }),
          dict({
            'node': dict({
              'name': '4',
            }),
          }),
          dict({
            'node': dict({
              'name': '5',
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_children_offset_pagination[2-2]
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
          dict({
            'node': dict({
              'name': '3',
            }),
          }),
          dict({
            'node': dict({
              'name': '4',
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_children_offset_pagination[2-None]
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
          dict({
            'node': dict({
              'name': '1',
            }),
          }),
          dict({
            'node': dict({
              'name': '2',
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_children_offset_pagination[None-2]
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
          dict({
            'node': dict({
              'name': '3',
            }),
          }),
          dict({
            'node': dict({
              'name': '4',
            }),
          }),
          dict({
            'node': dict({
              'name': '5',
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_children_offset_pagination[None-5]
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
        ]),
      }),
    }),
  })
# ---
# name: test_children_project_filter
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
          dict({
            'node': dict({
              'name': 'Only I should be returned',
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_children_query_ordering
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
          dict({
            'node': dict({
              'createdAt': '2020-11-11T00:00:00+00:00',
              'name': '',
            }),
          }),
          dict({
            'node': dict({
              'createdAt': '2020-12-12T00:00:00+00:00',
              'name': '',
            }),
          }),
          dict({
            'node': dict({
              'createdAt': '2020-12-12T00:00:00+00:00',
              'name': 'Alpha',
            }),
          }),
          dict({
            'node': dict({
              'createdAt': '2020-12-12T00:00:00+00:00',
              'name': 'Bravo',
            }),
          }),
          dict({
            'node': dict({
              'createdAt': '2020-12-12T00:00:00+00:00',
              'name': 'Bravo',
            }),
          }),
          dict({
            'node': dict({
              'createdAt': '2020-11-11T00:00:00+00:00',
              'name': 'Charlie',
            }),
          }),
          dict({
            'node': dict({
              'createdAt': '2020-12-12T00:00:00+00:00',
              'name': 'Charlie',
            }),
          }),
          dict({
            'node': dict({
              'createdAt': '2020-12-12T00:00:00+00:00',
              'name': 'Delta',
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_children_query_project_user_with_global_view_families_perm
  dict({
    'data': dict({
      'children': dict({
        'edges': list([
          dict({
            'node': dict({
              'birthyear': 2020,
              'name': 'Same project - Should be returned 1/1',
              'postalCode': '73557',
              'relationships': dict({
                'edges': list([
                  dict({
                    'node': dict({
                      'guardian': dict({
                        'email': 'funderwood@example.com',
                        'firstName': 'Blake',
                        'lastName': 'Newton',
                        'phoneNumber': '497-963-8034x6697',
                      }),
                      'type': 'PARENT',
                    }),
                  }),
                ]),
              }),
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_children_total_count[None]
  dict({
    'data': dict({
      'children': dict({
        'count': 5,
      }),
    }),
  })
# ---
# name: test_children_total_count[first]
  dict({
    'data': dict({
      'children': dict({
        'count': 5,
      }),
    }),
  })
# ---
# name: test_children_total_count[limit]
  dict({
    'data': dict({
      'children': dict({
        'count': 5,
      }),
    }),
  })
# ---
# name: test_delete_child_mutation
  dict({
    'data': dict({
      'deleteChild': dict({
        '__typename': 'DeleteChildMutationPayload',
      }),
    }),
  })
# ---
# name: test_get_available_events
  dict({
    'data': dict({
      'child': dict({
        'availableEvents': dict({
          'edges': list([
            dict({
              'node': dict({
                'createdAt': '2020-12-12T00:00:00+00:00',
                'occurrences': dict({
                  'edges': list([
                    dict({
                      'node': dict({
                        'remainingCapacity': 46,
                      }),
                    }),
                  ]),
                }),
              }),
            }),
          ]),
        }),
        'occurrences': dict({
          'edges': list([
            dict({
              'node': dict({
                'time': '2020-12-12T00:00:00+00:00',
              }),
            }),
          ]),
        }),
        'pastEvents': dict({
          'edges': list([
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_get_past_events
  dict({
    'data': dict({
      'child': dict({
        'availableEvents': dict({
          'edges': list([
          ]),
        }),
        'occurrences': dict({
          'edges': list([
            dict({
              'node': dict({
                'time': '2020-12-11T22:59:00+00:00',
              }),
            }),
            dict({
              'node': dict({
                'time': '2020-12-11T23:01:00+00:00',
              }),
            }),
          ]),
        }),
        'pastEvents': dict({
          'edges': list([
            dict({
              'node': dict({
                'createdAt': '2020-12-12T00:00:00+00:00',
                'name': 'enrolled occurrence in the past',
                'occurrences': dict({
                  'edges': list([
                    dict({
                      'node': dict({
                        'remainingCapacity': 29,
                      }),
                    }),
                    dict({
                      'node': dict({
                        'remainingCapacity': 30,
                      }),
                    }),
                  ]),
                }),
              }),
            }),
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_get_past_events_including_external_ticket_system_events
  dict({
    'data': dict({
      'child': dict({
        'pastEvents': dict({
          'edges': list([
            dict({
              'node': dict({
                'name': 'Expected as 1/4',
              }),
            }),
            dict({
              'node': dict({
                'name': 'Expected as 2/4',
              }),
            }),
            dict({
              'node': dict({
                'name': 'Expected as 3/4',
              }),
            }),
            dict({
              'node': dict({
                'name': 'Expected as 4/4',
              }),
            }),
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_submit_children_and_guardian
  dict({
    'data': dict({
      'submitChildrenAndGuardian': dict({
        'children': list([
          dict({
            'birthyear': 2020,
            'name': 'Matti',
            'postalCode': '00840',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': 'OTHER_GUARDIAN',
                  }),
                }),
              ]),
            }),
          }),
          dict({
            'birthyear': 2020,
            'name': 'Jussi',
            'postalCode': '00820',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': None,
                  }),
                }),
              ]),
            }),
          }),
        ]),
        'guardian': dict({
          'email': 'michellewalker@example.net',
          'firstName': 'Gulle',
          'languagesSpokenAtHome': dict({
            'edges': list([
              dict({
                'node': dict({
                  'alpha3Code': 'swe',
                }),
              }),
              dict({
                'node': dict({
                  'alpha3Code': 'fin',
                }),
              }),
            ]),
          }),
          'lastName': 'Guardian',
          'phoneNumber': '777-777777',
        }),
      }),
    }),
  })
# ---
# name: test_submit_children_and_guardian_with_falsy_email[None]
  dict({
    'data': dict({
      'submitChildrenAndGuardian': dict({
        'children': list([
          dict({
            'birthyear': 2020,
            'name': 'Matti',
            'postalCode': '00840',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': 'OTHER_GUARDIAN',
                  }),
                }),
              ]),
            }),
          }),
          dict({
            'birthyear': 2020,
            'name': 'Jussi',
            'postalCode': '00820',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': None,
                  }),
                }),
              ]),
            }),
          }),
        ]),
        'guardian': dict({
          'email': 'michellewalker@example.net',
          'firstName': 'Gulle',
          'languagesSpokenAtHome': dict({
            'edges': list([
            ]),
          }),
          'lastName': 'Guardian',
          'phoneNumber': '777-777777',
        }),
      }),
    }),
  })
# ---
# name: test_submit_children_and_guardian_with_falsy_email[]
  dict({
    'data': dict({
      'submitChildrenAndGuardian': dict({
        'children': list([
          dict({
            'birthyear': 2020,
            'name': 'Matti',
            'postalCode': '00840',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': 'OTHER_GUARDIAN',
                  }),
                }),
              ]),
            }),
          }),
          dict({
            'birthyear': 2020,
            'name': 'Jussi',
            'postalCode': '00820',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': None,
                  }),
                }),
              ]),
            }),
          }),
        ]),
        'guardian': dict({
          'email': 'michellewalker@example.net',
          'firstName': 'Gulle',
          'languagesSpokenAtHome': dict({
            'edges': list([
            ]),
          }),
          'lastName': 'Guardian',
          'phoneNumber': '777-777777',
        }),
      }),
    }),
  })
# ---
# name: test_submit_children_and_guardian_with_user_email
  dict({
    'data': dict({
      'submitChildrenAndGuardian': dict({
        'children': list([
          dict({
            'birthyear': 2020,
            'name': 'Matti',
            'postalCode': '00840',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': 'OTHER_GUARDIAN',
                  }),
                }),
              ]),
            }),
          }),
          dict({
            'birthyear': 2020,
            'name': 'Jussi',
            'postalCode': '00820',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': None,
                  }),
                }),
              ]),
            }),
          }),
        ]),
        'guardian': dict({
          'email': 'michellewalker@example.net',
          'firstName': 'Gulle',
          'languagesSpokenAtHome': dict({
            'edges': list([
            ]),
          }),
          'lastName': 'Guardian',
          'phoneNumber': '777-777777',
        }),
      }),
    }),
  })
# ---
# name: test_submit_children_and_guardian_without_email
  dict({
    'data': dict({
      'submitChildrenAndGuardian': dict({
        'children': list([
          dict({
            'birthyear': 2020,
            'name': 'Matti',
            'postalCode': '00840',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': 'OTHER_GUARDIAN',
                  }),
                }),
              ]),
            }),
          }),
          dict({
            'birthyear': 2020,
            'name': 'Jussi',
            'postalCode': '00820',
            'relationships': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'guardian': dict({
                      'email': 'michellewalker@example.net',
                      'firstName': 'Gulle',
                      'lastName': 'Guardian',
                      'phoneNumber': '777-777777',
                    }),
                    'type': None,
                  }),
                }),
              ]),
            }),
          }),
        ]),
        'guardian': dict({
          'email': 'michellewalker@example.net',
          'firstName': 'Gulle',
          'languagesSpokenAtHome': dict({
            'edges': list([
            ]),
          }),
          'lastName': 'Guardian',
          'phoneNumber': '777-777777',
        }),
      }),
    }),
  })
# ---
# name: test_upcoming_events_and_event_groups
  dict({
    'data': dict({
      'child': dict({
        'upcomingEventsAndEventGroups': dict({
          'edges': list([
            dict({
              'node': dict({
                '__typename': 'EventGroupNode',
                'canChildEnroll': True,
                'name': 'This should be the 1/8',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventNode',
                'canChildEnroll': True,
                'name': 'This should be 2/8',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventNode',
                'canChildEnroll': True,
                'name': 'This should be 3/8',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventNode',
                'canChildEnroll': True,
                'name': 'This should be 4/8',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventNode',
                'canChildEnroll': True,
                'name': 'This should be 5/8',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventGroupNode',
                'canChildEnroll': True,
                'name': 'This should be 6/8',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventNode',
                'canChildEnroll': False,
                'name': 'This should be 7/8',
              }),
            }),
            dict({
              'node': dict({
                '__typename': 'EventGroupNode',
                'canChildEnroll': False,
                'name': 'This should be 8/8',
              }),
            }),
          ]),
        }),
      }),
    }),
  })
# ---
# name: test_update_child_mutation
  dict({
    'data': dict({
      'updateChild': dict({
        'child': dict({
          'birthyear': 2023,
          'name': 'Matti',
          'postalCode': '00840',
        }),
      }),
    }),
  })
# ---
# name: test_update_child_mutation_should_have_no_required_fields
  dict({
    'data': dict({
      'updateChild': dict({
        'child': dict({
          'birthyear': 2023,
          'name': 'Katherine Gomez',
          'postalCode': '49763',
        }),
      }),
    }),
  })
# ---
